subscribe close and subscribe option

--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   },
   "devDependencies": {
     "gh-pages": "^1.0.0",
-    "prettier": "^1.7.4"
+    "prettier": "^1.7.4",
+    "react": "latest",
+    "prop-types": "latest"
   }
 }
